kustomize/loc/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loc-choreo-system
  labels:
    name: loc-choreo-system
