kustomize/loc/deployment-strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appservice
spec:
  template:
    spec:
      imagePullSecrets:
        - name: secret-acr
      containers:
          - name: appservice
            imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      imagePullSecrets:
        - name: secret-acr
      containers:
        - name: frontend
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loggingapi
spec:
  template:
    spec:
      imagePullSecrets:
        - name: secret-acr
      containers:
        - name: loggingapi
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: negotiator
spec:
  template:
    spec:
      imagePullSecrets:
        - name: secret-acr
      containers:
        - name: negotiator
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsapi
spec:
  template:
    spec:
      imagePullSecrets:
        - name: secret-acr
      containers:
        - name: obsapi
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perfanalyzer
spec:
  template:
    spec:
      imagePullSecrets:
        - name: secret-acr
      containers:
        - name: perfanalyzer
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: programanalyzer
spec:
  template:
    spec:
      imagePullSecrets:
        - name: secret-acr
      containers:
        - name: programanalyzer
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry
spec:
  template:
    spec:
      imagePullSecrets:
        - name: secret-acr
      containers:
        - name: telemetry
          imagePullPolicy: IfNotPresent
